--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: canaima-oficina
 Section: metapackages
 Priority: standard
 Maintainer: Jesus Palencia <sinfallas@gmail.com>
-Build-Depends: debhelper, cdbs
+Build-Depends: debhelper (>= 9.20150101), cdbs (>= 0.4.130)
 Standards-Version: 3.9.5
 
 Package: canaima-oficina
